# goal-conditioned-control

./: .gitignore  LICENSE  README.md  dip_train.py  main.py  pyproject.toml
cleanrl/: sac_continuous_action.py
cleanrl/cleanrl_utils/: buffers.py
cleanrl/cstr/: TerminalFrameCapture.py  __init__.py  particle_sac_eval.py  scenarioCSTR_ParticleStateEnv.py
dip/: dip.py  dip_eval.py  dip_train.ipynb  ieee.mplstyle  soap.py
dip/models/: policy_True_75_0.001_adam_gc.pth  policy_True_75_0.001_adam_l2_soft.pth  policy_True_75_0.003_soap_gc.pth  policy_True_75_0.003_soap_l2_soft.pth
