[project]
name = "goal-conditioned-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium==0.28.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch==2.9.0",
    "tyro>=0.9.35",
    "wandb>=0.23.1",
    "scipy==1.15.3",
]
